--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,15 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+    <div class = "field">
+    <%= f.label :first_name %></br>
+    <%= f.text_field :first_name %> </br>   
+  </div>
+
+  <div>
+    <%= f.label :last_name %> </br> 
+    <%= f.text_field :last_name %> </br> 
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -21,9 +30,14 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :description %> </br>
+    <%= f.text_area :description %> </br>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
